--- a/index.html
+++ b/index.html
@@ -57,22 +57,6 @@
         <div class="reviews-box highlight-section">
             <h2 class="reviews-title">Customer Reviews</h2>
 
-            <!-- Existing reviews -->
-            <div class="review">
-                <div class="avatar-wrapper" title="jane@example.com">
-                    <img src="https://www.gravatar.com/avatar/00000000000000000000000000000000?d=identicon&s=60" 
-                         alt="Jane D." class="review-img">
-                </div>
-                <p class="review-text">"Amazing service! Our garden has never looked better." <span>- Jane D.</span></p>
-            </div>
-            <div class="review">
-                <div class="avatar-wrapper" title="mark@example.com">
-                    <img src="https://www.gravatar.com/avatar/11111111111111111111111111111111?d=identicon&s=60" 
-                         alt="Mark S." class="review-img">
-                </div>
-                <p class="review-text">"Professional and reliable. Highly recommended!" <span>- Mark S.</span></p>
-            </div>
-
             <!-- Review Form -->
             <form class="review-form" id="reviewForm">
                 <h3>Submit Your Review</h3>
@@ -89,33 +73,71 @@
 <!-- MD5 library for Gravatar -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.19.0/js/md5.min.js"></script>
 
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
+
+<script>
+    // TODO: Replace with your Firebase project config
+    const firebaseConfig = {
+        apiKey: "YOUR_API_KEY",
+        authDomain: "your-project.firebaseapp.com",
+        databaseURL: "https://your-project-default-rtdb.firebaseio.com",
+        projectId: "your-project",
+        storageBucket: "your-project.appspot.com",
+        messagingSenderId: "XXXX",
+        appId: "XXXX"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+</script>
+
 <script>
     const form = document.getElementById('reviewForm');
-    const reviewsBox = document.querySelector('.reviews-box');
+    const reviewsContainer = document.querySelector('.reviews-box');
 
+    // Load existing reviews from Firebase
+    database.ref('reviews').on('child_added', function(snapshot) {
+        const data = snapshot.val();
+        addReviewToPage(data.name, data.email, data.review, data.avatar);
+    });
+
+    // Submit new review
     form.addEventListener('submit', function(e) {
         e.preventDefault();
         const name = document.getElementById('name').value.trim();
         const email = document.getElementById('email').value.trim().toLowerCase();
         const reviewText = document.getElementById('review').value.trim();
 
-        // Generate Gravatar URL
         const hash = md5(email);
         const avatarUrl = `https://www.gravatar.com/avatar/${hash}?d=identicon&s=60`;
 
-        // Create new review element
-        const newReview = document.createElement('div');
-        newReview.classList.add('review');
-        newReview.innerHTML = `
+        // Push to Firebase
+        const newReviewRef = database.ref('reviews').push();
+        newReviewRef.set({
+            name: name,
+            email: email,
+            review: reviewText,
+            avatar: avatarUrl
+        });
+
+        form.reset();
+    });
+
+    // Function to add review to page
+    function addReviewToPage(name, email, reviewText, avatarUrl) {
+        const reviewDiv = document.createElement('div');
+        reviewDiv.classList.add('review');
+        reviewDiv.innerHTML = `
             <div class="avatar-wrapper" title="${email}">
                 <img src="${avatarUrl}" alt="${name}" class="review-img">
             </div>
             <p class="review-text">"${reviewText}" <span>- ${name}</span></p>
         `;
-
-        reviewsBox.insertBefore(newReview, form);
-        form.reset();
-    });
+        const formElement = document.querySelector('.review-form');
+        reviewsContainer.insertBefore(reviewDiv, formElement);
+    }
 </script>
 
 </body>
