--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 
 <header>
     <nav class="navbar">
+        <div class="nav-left">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="folder/Img1.png" alt="GreenScape Logo">
+                </a>
+            </div>
+            <h1 class="nav-heading">Cedar Landscapes</h1>
+        </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="job.html">Jobs</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
-        <div class="logo">
-            <a href="index.html">
-                <img src="folder/Img1.png" alt="GreenScape Logo">
-            </a>
-        </div>
     </nav>
 </header>
 
