--- a/index.html
+++ b/index.html
@@ -1,146 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenScape Landscaping</title>
-
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600;700&family=Lora:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cedar Landscapes</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600;700&family=Lora:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header>
-    <nav class="navbar">
-        <div class="nav-left">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="folder/Img1.png" alt="GreenScape Logo">
-                </a>
-            </div>
-            <h1 class="nav-heading">Cedar Landscapes</h1>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="job.html">Jobs</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+  <nav class="navbar">
+    <div class="nav-left">
+      <div class="logo">
+        <a href="index.html"><img src="folder/Img1.png" alt="Logo"></a>
+      </div>
+      <h1 class="nav-heading">Cedar Landscapes</h1>
+    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="job.html">Jobs</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 
 <main>
-    <section class="info-section">
-        <div class="container">
+  <section class="info-section">
+    <div class="container">
+      <!-- Info Box -->
+      <div class="highlight-section info-box">
+        <p>Whether you’re looking to make small updates or completely transform your garden, we’re here to help. With over 25 years of landscaping experience, we offer a full range of services including patios, paving, driveways, decking, planting, lighting, and ongoing maintenance.</p>
+        <p>Each project is discussed and reviewed on-site with both the employer and the property owners to confirm your vision and requirements in detail. During this stage, we also provide a tailored quote that aligns with your budget.</p>
+        <p>Based in Munster, we’ve completed extensive landscaping work across Kerry, Cork, and Limerick, working on both private gardens and public projects.</p>
+        <p class="highlight-sentence">Cedar: Experience You Can Trust, Results You’ll Love.</p>
+      </div>
 
-            <!-- Info Box -->
-            <div class="highlight-section info-box">
-                <p>Whether you’re looking to make small updates or completely transform your garden, we’re here to help. With over 25 years of landscaping experience, we offer a full range of services including patios, paving, driveways, decking, planting, lighting, and ongoing maintenance.</p>
-                <p>Each project is discussed and reviewed on-site with both the employer and the property owners to confirm your vision and requirements in detail. During this stage, we also provide a tailored quote that aligns with your budget.</p>
-                <p>Based in Munster, we’ve completed extensive landscaping work across Kerry, Cork, and Limerick, working on both private gardens and public projects.</p>
-                <p class="highlight-sentence">Cedar: Experience You Can Trust, Results You’ll Love.</p>
-            </div>
+      <!-- Services Box -->
+      <div class="highlight-section services-box">
+        <h2 class="services-title">Services Include</h2>
+        <ul>
+          <li>Patios</li>
+          <li>Paving</li>
+          <li>Driveways</li>
+          <li>Decking</li>
+          <li>Planting</li>
+          <li>Lighting</li>
+          <li>Ongoing Maintenance</li>
+        </ul>
+      </div>
+    </div>
 
-            <!-- Services Box -->
-            <div class="highlight-section services-box">
-                <h2 class="services-title">Services Include</h2>
-                <ul>
-                    <li>Patios</li>
-                    <li>Paving</li>
-                    <li>Driveways</li>
-                    <li>Decking</li>
-                    <li>Planting</li>
-                    <li>Lighting</li>
-                    <li>Ongoing Maintenance</li>
-                </ul>
-            </div>
-
-        </div>
-
-        <!-- Reviews Box -->
-        <div class="reviews-box highlight-section">
-            <h2 class="reviews-title">Customer Reviews</h2>
-
-            <!-- Review Form -->
-            <form class="review-form" id="reviewForm">
-                <h3>Submit Your Review</h3>
-                <input type="text" id="name" placeholder="Your Name" required>
-                <input type="email" id="email" placeholder="Your Email" required>
-                <textarea id="review" placeholder="Your Review" rows="4" required></textarea>
-                <button type="submit">Submit Review</button>
-            </form>
-        </div>
-
-    </section>
+    <!-- Reviews Box -->
+    <div class="reviews-box highlight-section">
+      <h2 class="reviews-title">Customer Reviews</h2>
+      <form class="review-form" id="reviewForm">
+        <h3>Submit Your Review</h3>
+        <input type="text" id="name" placeholder="Your Name" required>
+        <input type="email" id="email" placeholder="Your Email" required>
+        <textarea id="review" placeholder="Your Review" rows="4" required></textarea>
+        <button type="submit">Submit Review</button>
+      </form>
+    </div>
+  </section>
 </main>
 
-<!-- MD5 library for Gravatar -->
+<!-- MD5 for Gravatar -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.19.0/js/md5.min.js"></script>
 
-<!-- Firebase SDK -->
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <script>
-    // Firebase configuration (replace with your own project config)
-    const firebaseConfig = {
-        apiKey: "YOUR_API_KEY",
-        authDomain: "your-project.firebaseapp.com",
-        databaseURL: "https://your-project-default-rtdb.firebaseio.com",
-        projectId: "your-project",
-        storageBucket: "your-project.appspot.com",
-        messagingSenderId: "XXXX",
-        appId: "XXXX"
-    };
+  // Replace with your Firebase config
+  const firebaseConfig = {
+    apiKey: "YOUR_API_KEY",
+    authDomain: "your-project.firebaseapp.com",
+    databaseURL: "https://your-project-default-rtdb.firebaseio.com",
+    projectId: "your-project",
+    storageBucket: "your-project.appspot.com",
+    messagingSenderId: "XXXX",
+    appId: "XXXX"
+  };
 
-    firebase.initializeApp(firebaseConfig);
-    const database = firebase.database();
-</script>
+  firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
 
-<script>
-    const form = document.getElementById('reviewForm');
-    const reviewsContainer = document.querySelector('.reviews-box');
+  const form = document.getElementById('reviewForm');
+  const reviewsContainer = document.querySelector('.reviews-box');
 
-    // Load existing reviews from Firebase
-    database.ref('reviews').on('child_added', function(snapshot) {
-        const data = snapshot.val();
-        addReviewToPage(data.name, data.email, data.review, data.avatar);
+  database.ref('reviews').on('child_added', function(snapshot){
+    const data = snapshot.val();
+    addReviewToPage(data.name, data.email, data.review, data.avatar);
+  });
+
+  form.addEventListener('submit', function(e){
+    e.preventDefault();
+    const name = document.getElementById('name').value.trim();
+    const email = document.getElementById('email').value.trim().toLowerCase();
+    const reviewText = document.getElementById('review').value.trim();
+    const hash = md5(email);
+    const avatarUrl = `https://www.gravatar.com/avatar/${hash}?d=identicon&s=60`;
+
+    const newReviewRef = database.ref('reviews').push();
+    newReviewRef.set({
+      name: name,
+      email: email,
+      review: reviewText,
+      avatar: avatarUrl
     });
 
-    // Submit new review
-    form.addEventListener('submit', function(e) {
-        e.preventDefault();
-        const name = document.getElementById('name').value.trim();
-        const email = document.getElementById('email').value.trim().toLowerCase();
-        const reviewText = document.getElementById('review').value.trim();
+    form.reset();
+  });
 
-        const hash = md5(email);
-        const avatarUrl = `https://www.gravatar.com/avatar/${hash}?d=identicon&s=60`;
-
-        // Push review to Firebase
-        const newReviewRef = database.ref('reviews').push();
-        newReviewRef.set({
-            name: name,
-            email: email,
-            review: reviewText,
-            avatar: avatarUrl
-        });
-
-        form.reset();
-    });
-
-    // Add review to page
-    function addReviewToPage(name, email, reviewText, avatarUrl) {
-        const reviewDiv = document.createElement('div');
-        reviewDiv.classList.add('review');
-        reviewDiv.innerHTML = `
-            <div class="avatar-wrapper" title="${email}">
-                <img src="${avatarUrl}" alt="${name}" class="review-img">
-            </div>
-            <p class="review-text">"${reviewText}" <span>- ${name}</span></p>
-        `;
-        const formElement = document.querySelector('.review-form');
-        reviewsContainer.insertBefore(reviewDiv, formElement);
-    }
+  function addReviewToPage(name,email,reviewText,avatarUrl){
+    const reviewDiv = document.createElement('div');
+    reviewDiv.classList.add('review');
+    reviewDiv.innerHTML = `
+      <div class="avatar-wrapper" title="${email}">
+        <img src="${avatarUrl}" alt="${name}" class="review-img">
+      </div>
+      <p class="review-text">"${reviewText}" <span>- ${name}</span></p>
+    `;
+    const formElement = document.querySelector('.review-form');
+    reviewsContainer.insertBefore(reviewDiv, formElement);
+  }
 </script>
 
 </body>
