--- a/contact.html
+++ b/contact.html
@@ -26,17 +26,15 @@
 </header>
 
 <main>
-  <section class="contact-section">
-    <div class="contact-box highlight-section">
-      <h2 class="contact-title">Contact Us</h2>
-
-      <div class="contact-info">
-        <p><strong>Employer:</strong> John Doe</p>
-        <p><strong>Email:</strong> info@cedarlandscapes.com</p>
-        <p><strong>Phone:</strong> +353 123 456 789</p>
-        <p><strong>Location:</strong> Munster, Ireland</p>
-        <p><strong>Business Hours:</strong> Mon-Fri 9:00 AM - 5:00 PM</p>
-      </div>
+  <section class="info-section">
+    <!-- Centered Contact Box, styled same as Info Box -->
+    <div class="highlight-section info-box contact-box">
+      <h2 class="contact-title" style="text-align:center;">Contact Us</h2>
+      <p><strong>Employer:</strong> John Doe</p>
+      <p><strong>Email:</strong> info@cedarlandscapes.com</p>
+      <p><strong>Phone:</strong> +353 123 456 789</p>
+      <p><strong>Location:</strong> Munster, Ireland</p>
+      <p><strong>Business Hours:</strong> Mon-Fri 9:00 AM - 5:00 PM</p>
     </div>
   </section>
 </main>
