--- a/job.html
+++ b/job.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cedar Landscapes</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600;700&family=Lora:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+</head>
+<body>
 
+<header>
+  <nav class="navbar">
+    <div class="nav-left">
+      <div class="logo">
+        <a href="#"><img src="folder/Img1.png" alt="Logo"></a>
+      </div>
+      <h1 class="nav-heading">Cedar Landscapes</h1>
+    </div>
+    <ul class="nav-links">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main>
+  <section class="info-section">
+    <div class="container">
+      <!-- Info Box -->
+      <div class="highlight-section info-box">
+        <p>Whether you’re looking to make small updates or completely transform your garden, we’re here to help.</p>
+        <p>Each project is discussed and reviewed on-site with both the employer and the property owners.</p>
+        <p>Based in Munster, we’ve completed extensive landscaping work across Kerry, Cork, and Limerick.</p>
+        <p class="highlight-sentence">Cedar: Experience You Can Trust, Results You’ll Love.</p>
+      </div>
+
+      <!-- Services Box -->
+      <div class="highlight-section services-box">
+        <h2 class="services-title">Services Include</h2>
+        <ul>
+          <li>Patios</li>
+          <li>Paving</li>
+          <li>Driveways</li>
+          <li>Decking</li>
+          <li>Planting</li>
+          <li>Lighting</li>
+          <li>Ongoing Maintenance</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Reviews Box -->
+    <div class="reviews-box highlight-section">
+      <h2 class="reviews-title">Customer Reviews</h2>
+      <form class="review-form">
+        <h3>Submit Your Review</h3>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Review" rows="4" required></textarea>
+        <button type="submit">Submit Review</button>
+      </form>
+    </div>
+  </section>
+</main>
+
+</body>
+</html>
