--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
     <!-- Centered Contact Box, styled same as Info Box -->
     <div class="highlight-section info-box contact-box">
       <h2 class="contact-title" style="text-align:center;">Contact Us</h2>
-      <p><strong>Employer:</strong> John Doe</p>
-      <p><strong>Email:</strong> info@cedarlandscapes.com</p>
-      <p><strong>Phone:</strong> +353 123 456 789</p>
+      <p><strong>Employer:</strong> Joh</p>
+      <p><strong>Email:</strong> info@cedarlandscapes.ie</p>
+      <p><strong>Phone:</strong> +353 087 807 4232</p>
       <p><strong>Location:</strong> Munster, Ireland</p>
-      <p><strong>Business Hours:</strong> Mon-Fri 9:00 AM - 5:00 PM</p>
+      <p><strong>Business Hours:</strong> Mon-Fri 7:00 AM - 4:00 PM</p>
     </div>
   </section>
 </main>
