--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
           <li>Planting</li>
           <li>Lighting</li>
           <li>Ongoing Maintenance</li>
+          <li>Fencing</li>
+          <li>Lawns</li>
+          <li>Pergolas</li>
+          <li>Lighting</li>
+          <li>Tree clearance</li>
         </ul>
       </div>
     </div>
