--- a/job.html
+++ b/job.html
@@ -18,9 +18,9 @@
       <h1 class="nav-heading">Cedar Landscapes</h1>
     </div>
     <ul class="nav-links">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Jobs</a></li>
-      <li><a href="#">Contact</a></li>
+     <li><a href="index.html">Home</a></li>
+     <li><a href="job.html">Jobs</a></li>
+     <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
