--- a/index.html
+++ b/index.html
@@ -40,18 +40,17 @@
       <div class="highlight-section services-box">
         <h2 class="services-title">Services Include</h2>
         <ul>
-          <li>Patios</li>
-          <li>Paving</li>
-          <li>Driveways</li>
-          <li>Decking</li>
-          <li>Planting</li>
-          <li>Lighting</li>
-          <li>Ongoing Maintenance</li>
-          <li>Fencing</li>
-          <li>Lawns</li>
-          <li>Pergolas</li>
-          <li>Lighting</li>
-          <li>Tree clearance</li>
+          <li><a href="job.html?title=Patios">Patios</a></li>
+          <li><a href="job.html?title=Paving">Paving</a></li>
+          <li><a href="job.html?title=Driveways">Driveways</a></li>
+          <li><a href="job.html?title=Decking">Decking</a></li>
+          <li><a href="job.html?title=Planting">Planting</a></li>
+          <li><a href="job.html?title=Lighting">Lighting</a></li>
+          <li><a href="job.html?title=Ongoing%20Maintenance">Ongoing Maintenance</a></li>
+          <li><a href="job.html?title=Fencing">Fencing</a></li>
+          <li><a href="job.html?title=Lawns">Lawns</a></li>
+          <li><a href="job.html?title=Pergolas">Pergolas</a></li>
+          <li><a href="job.html?title=Tree%20Clearance">Tree Clearance</a></li>
         </ul>
       </div>
     </div>
